--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.19",
-    "@types/node": "12.11.1",
-    "@types/react": "16.9.7",
-    "@types/react-dom": "16.9.2",
+    "@types/history": "^4.7.3",
+    "@types/jest": "24.0.18",
+    "@types/lodash": "^4.14.144",
+    "@types/node": "12.7.12",
+    "@types/react": "16.9.5",
+    "@types/react-dom": "16.9.1",
+    "@types/react-router-dom": "^5.1.0",
+    "firebase": "^7.2.0",
+    "mobx": "^5.14.0",
+    "mobx-react-lite": "^1.4.1",
+    "mobx-state-tree": "^3.14.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
@@ -32,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/mobx-devtools-mst": "^0.9.0",
+    "mobx-devtools-mst": "^0.9.21"
   }
 }
